feat: implement internal user caching and retrieval in UserService
- Updated UserService to include caching for internal user retrieval.
- Introduced new test cases for internal user management in UserServiceImplTest.